src/test/resources/de/cd4analysis/cocos/mcg2ebnf/valid/CD4AC3012.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3012 {

	class A;
	class B;
	
	association assoc1 <<ordered>> A -> B;
	association assoc1 A -> B <<ordered>>;

}