src/test/resources/de/cd4analysis/cocos/mcg2ebnf/invalid/CD4AC3011.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3011 {

	class A;
	class B;
	
	<<theStereoType>> association assoc1 A -> B;
	<<theStereoType>> association A <- B;
	<<theStereoType>> association A <-> B;
	<<theStereoType>> association A -- B;
}